@@ -21,7 +21,7 @@
 # exten => _8320*.,1,AGI(VD_amd.agi,${EXTEN}-----YES)
 # exten => _8320*.,2,Hangup
 #
-# Copyright (C) 2017  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
+# Copyright (C) 2018  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
 #
 # changes:
 # 60206-1434 - first build
@@ -52,6 +52,7 @@
 # 170426-1711 - Fixed double-logging issue
 # 180529-1707 - Fix for missing called_count value in vicidial_log insertions
 # 180919-1831 - Fix for logging issue
+# 180924-1557 - Added called_count as AMM wildcard
 #
 
 $script = 'VD_amd.agi';
@@ -1059,7 +1060,14 @@ else
 								if ($AGILOG) {$agi_string = "AMM owner Match Found: |$amm_field|$amm_rank|$amm_wildcard($AMM_owner)|$amm_filename|";   &agi_output;}
 								}
 							}
-
+						if ($amm_field =~ /called_count/) 
+							{
+							if ($AMM_called_count =~ /^$amm_wildcard$/i) 
+								{
+								$amm_filename_match = $amm_filename;
+								if ($AGILOG) {$agi_string = "AMM called_count Match Found: |$amm_field|$amm_rank|$amm_wildcard($AMM_owner)|$amm_filename|";   &agi_output;}
+								}
+							}
 
 						if (length($amm_filename_match) > 0)
 							{$DB_am_message_exten = $amm_filename_match;}
